--- a/style.css
+++ b/style.css
@@ -23,3 +23,11 @@ button {
   border: 1px solid rgb(170, 168, 168);
   font-size: 60px
 }
+
+#restart{
+  margin-left: 50%;
+  height: 40px;
+  background-color: red;
+  border: 1px solid rgb(204, 197, 197);
+  border-radius: 10px;
+}
