--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .table {
   display: flex;
-  height: 90vh;
+  height: 85vh;
   justify-content: center;
   align-items: center;
 }
@@ -21,8 +21,9 @@ button {
   height: 100%;
   background-color: #ffffff;
   border: 1px solid rgb(170, 168, 168);
-  font-size: 60px
+  font-size: 60px;
 }
+
 
 #restart{
   margin-left: 50%;
@@ -30,4 +31,8 @@ button {
   background-color: red;
   border: 1px solid rgb(204, 197, 197);
   border-radius: 10px;
+}
+
+h1{
+  text-align: center;
 }
