--- a/style.css
+++ b/style.css
@@ -24,11 +24,18 @@ button {
   font-size: 60px;
 }
 
-
 #restart{
-  margin-left: 50%;
+  width: 115px;
   height: 40px;
-  background-color: red;
+  background-color: rgb(198, 9, 9);
+  border: 1px solid rgb(204, 197, 197);
+  border-radius: 10px;
+}
+
+#newPlayer{
+  width: 115px;
+  height: 40px;
+  background-color: rgb(99, 216, 103);
   border: 1px solid rgb(204, 197, 197);
   border-radius: 10px;
 }
