--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .table {
   display: flex;
-  height: 85vh;
+  height: 80vh;
   justify-content: center;
   align-items: center;
 }
@@ -42,4 +42,5 @@ button {
 
 h1{
   text-align: center;
+  height: 15px;
 }
