--- a/style.css
+++ b/style.css
@@ -40,6 +40,14 @@ button {
   border-radius: 10px;
 }
 
+#play_AI{
+  width: 115px;
+  height: 40px;
+  background-color: rgb(99, 216, 103);
+  border: 1px solid rgb(204, 197, 197);
+  border-radius: 10px;
+}
+
 h1{
   text-align: center;
   height: 15px;
