--- a/style.css
+++ b/style.css
@@ -1,3 +1,55 @@
+/* Null style */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+/*
+  2. Remove default margin
+*/
+* {
+  margin: 0;
+}
+/*
+  3. Allow percentage-based heights in the application
+*/
+html, body {
+  height: 100%;
+}
+/*
+  Typographic tweaks!
+  4. Add accessible line-height
+  5. Improve text rendering
+*/
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+/*
+  6. Improve media defaults
+*/
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+/*
+  7. Remove built-in form typography styles
+*/
+input, button, textarea, select {
+  font: inherit;
+}
+/*
+  8. Avoid text overflows
+*/
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+/*
+  9. Create a root stacking context
+*/
+#root, #__next {
+  isolation: isolate;
+}
+
+/* Null style */
 .table {
   display: flex;
   height: 80vh;
@@ -5,8 +57,8 @@
   align-items: center;
 }
 
-th {
-  border: none;
+td {
+  border: 1px solid black;
   width: 90px;
   height: 90px;
 }
@@ -16,7 +68,8 @@ table {
 }
 
 button {
-  margin-top: 17px;
+  display: block;
+  margin-top: 4px;
   width: 100%;
   height: 100%;
   background-color: #ffffff;
