low AI bug fixed

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html, body {
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  background-color: rgb(47, 44, 44);
 }
 /*
   6. Improve media defaults
@@ -41,6 +42,7 @@ input, button, textarea, select {
 */
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
+  color: #ffffff;
 }
 /*
   9. Create a root stacking context
